tests/a1/for_testing/bad9.mit
// error: line 3: empty return
fibonacci = fun(n){
                if(n == 1){return ;}
                if (n == 2){return 2;}
                print(n);
                return fibonacci(n -1) + fibonacci(n - 2);
            };

n1 = 10;
n2 = 11;
return fibonacci(n1) + fibonacci(n2) == fibonacci(12);
